--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.30.4",
-    "@tailwindcss/vite": "^4.1.5",
+    "@tailwindcss/vite": "^4.1.18",
     "aos": "^2.3.4",
     "axios": "^1.9.0",
     "framer-motion": "^12.9.2",
@@ -24,7 +24,6 @@
     "react-router-dom": "^7.5.3",
     "react-toastify": "^11.0.5",
     "react-type-animation": "^3.2.0",
-    "tailwindcss": "^4.1.5",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
@@ -32,10 +31,13 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "vite": "^6.2.0"
   }
 }
