--- a/package.json
+++ b/package.json
@@ -10,34 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.30.4",
-    "@tailwindcss/vite": "^4.1.18",
-    "aos": "^2.3.4",
-    "axios": "^1.9.0",
-    "framer-motion": "^12.9.2",
-    "lucide-react": "^0.487.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.5.0",
-    "react-intersection-observer": "^9.16.0",
-    "react-modal": "^3.16.3",
-    "react-router-dom": "^7.5.3",
-    "react-toastify": "^11.0.5",
-    "react-type-animation": "^3.2.0",
-    "zustand": "^5.0.4"
+    "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
+    "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.23",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
+    "@eslint/js": "^9.29.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.5.2",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.29.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.2.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
-    "vite": "^6.2.0"
+    "tailwindcss": "^4.1.11",
+    "vite": "^7.0.0"
   }
 }
