--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "lucide-react": "^0.562.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.11.0",
     "recharts": "^3.1.0"
   },
   "devDependencies": {
